[workspace]
members = [ "analysis","preimages"]
resolver = "2"

[workspace.dependencies]
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.5" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.5" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.5" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.5" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.5" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.5" }
reth-stages = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.5" }
alloy-primitives = "0.8.15"
anyhow = "1.0.40"
alloy-chains = "=0.1.55"
