[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
reth.workspace = true
reth-db.workspace = true
reth-db-api.workspace = true
anyhow.workspace = true
alloy-primitives.workspace = true
clap = { version = "4.5.30", features = ["derive"] }
indicatif = "0.17.11"
serde = "1.0.217"
serde_json = "1.0.138"
