[package]
name = "preimages"
version = "0.1.0"
edition = "2021"
keywords = ["ethereum", "stateless", "preimages"]
readme = "README.md"

[dependencies]
reth-db.workspace = true
reth-db-api.workspace = true
reth-chainspec.workspace = true
reth-provider.workspace = true
reth-node-types.workspace = true
reth-node-ethereum.workspace = true
reth-stages.workspace = true
anyhow.workspace = true
alloy-primitives.workspace = true
alloy-chains.workspace = true
clap = "4.5.23"
indicatif = "0.17.9"
rayon = "1.10.0"
hex = "0.4.3"
